@@ -94,11 +94,15 @@ NOTICE
       protected
 
         def colour?
-          @options.colour ? true : false
+          !!@options.colour
         end
 
         def dry_run?
-          @options.dry_run ? true : false
+          !!@options.dry_run
+        end
+        
+        def autospec?
+          !!@options.autospec
         end
         
         def backtrace_line(line)
@@ -106,7 +110,7 @@ NOTICE
         end
 
         def colour(text, colour_code)
-          return text unless ENV['RSPEC_COLOR'] || (colour? & output_to_tty?)
+          return text unless ENV['RSPEC_COLOR'] || (colour? & (autospec? || output_to_tty?))
           "#{colour_code}#{text}\e[0m"
         end
 
