@@ -23,6 +23,7 @@ module Spec
             @options = mock('options')
             @options.stub!(:dry_run).and_return(false)
             @options.stub!(:colour).and_return(false)
+            @options.stub!(:autospec).and_return(false)
             @formatter = Class.new(BaseTextFormatter) do
               def method_that_class_magenta(message)
                 magenta(message)
@@ -67,7 +68,7 @@ module Spec
           
           it "colorizes when colour? and output_to_tty? return true" do
             out = StringIO.new
-            options = stub('options', :colour => true)
+            options = stub('options', :colour => true, :autospec => false)
             formatter = BaseTextFormatter.new(options,out)
             formatter.stub!(:output_to_tty?).and_return(true)
             formatter.__send__(:colour, 'foo', "\e[32m").should == "\e[32mfoo\e[0m"
@@ -80,6 +81,15 @@ module Spec
             formatter.stub!(:output_to_tty?).and_return(false)
             
             ENV['RSPEC_COLOR'] = 'true'
+            
+            formatter.__send__(:colour, 'foo', "\e[32m").should == "\e[32mfoo\e[0m"
+          end
+          
+          it "colorizes when autospec? is true even if colour? and output_to_tty? return false" do
+            out = StringIO.new
+            options = stub('options', :colour => true, :autospec => true)
+            formatter = BaseTextFormatter.new(options,out)
+            formatter.stub!(:output_to_tty?).and_return(false)
             
             formatter.__send__(:colour, 'foo', "\e[32m").should == "\e[32mfoo\e[0m"
           end
